ajustando a imagem de moedas e a margin dos botões

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   <button type='submit' onclick='conversorEmDolar()'> Converter de Real para Dolar </button>
   <button type='submit' onclick='conversorDeBitcoin()'> Converter de Real para Bitcoin </button>
 </div>
-<img src="https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/Convers%C3%A3o+1.png">
+
 
 <h2>Histórico de conversão:</h2>
 <button id="myBtn">Abrir histórico</button>
+<img id="moedas" src="https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/Convers%C3%A3o+1.png">
 
 
 
@@ -39,6 +40,8 @@
 
 
 </div>
+
+
 
 
 
