ajustando para mobile

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
 
   <input type="text" id='input' placeholder='Digite o valor para converter' required>
-  <button type='submit' onclick='conversorEmReal()'> Converter de Dolar para Real </button>
-  <button type='submit' onclick='conversorEmDolar()'> Converter de Real para Dolar </button>
-  <button type='submit' onclick='conversorDeBitcoin()'> Converter de Real para Bitcoin </button>
+  <button type='submit' onclick='conversorEmReal()'> Dolar para Real </button>
+  <button type='submit' onclick='conversorEmDolar()'> Real para Dolar </button>
+  <button type='submit' onclick='conversorDeBitcoin()'>Real para Bitcoin </button>
 </div>
 
 
